Bug 142563 - Calling super() in a base class results in a crash
Summary: Calling super() in a base class results in a crash
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords:
Depends on:
Blocks: 140491
  Show dependency treegraph
 
Reported: 2015-03-10 20:38 PDT by Ryosuke Niwa
Modified: 2020-08-12 09:06 PDT (History)
5 users (show)

See Also:


Attachments
Fixes the crash (11.91 KB, patch)
2015-03-10 20:44 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Fixed a typo (11.91 KB, patch)
2015-03-10 20:46 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2015-03-10 20:38:07 PDT
class { constructor() { super() } } results in a crash.
Comment 1 Ryosuke Niwa 2015-03-10 20:44:16 PDT
Created attachment 248391 [details]
Fixes the crash
Comment 2 WebKit Commit Bot 2015-03-10 20:45:35 PDT
Attachment 248391 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/parser/Parser.h:378:  Please declare enum bitfields as unsigned integral types.  [runtime/enum_bitfields] [5]
Total errors found: 1 in 6 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Ryosuke Niwa 2015-03-10 20:46:05 PDT
Created attachment 248392 [details]
Fixed a typo
Comment 4 WebKit Commit Bot 2015-03-10 20:48:42 PDT
Attachment 248392 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/parser/Parser.h:378:  Please declare enum bitfields as unsigned integral types.  [runtime/enum_bitfields] [5]
Total errors found: 1 in 6 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 5 WebKit Commit Bot 2015-03-11 14:03:54 PDT
Comment on attachment 248392 [details]
Fixed a typo

Clearing flags on attachment: 248392

Committed r181404: <http://trac.webkit.org/changeset/181404>
Comment 6 WebKit Commit Bot 2015-03-11 14:04:00 PDT
All reviewed patches have been landed.  Closing bug.